--- a/client/src/SwiperCustom.css
+++ b/client/src/SwiperCustom.css
@@ -20,5 +20,32 @@
     color: #000;
 } 
 
-
+/* Gallery slider */
+  .mySwiper2 {
+    height: 350px;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  .mySwiper {
+    box-sizing: border-box;
+    padding: 10px 0;
+  }
+  
+  .mySwiper .swiper-slide {
+    width: 25%;
+    height: 100px;
+    opacity: 0.4;
+  }
+  
+  .mySwiper .swiper-slide-thumb-active {
+    opacity: 1;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
