--- a/client/src/components/ui/Input/Input.module.scss
+++ b/client/src/components/ui/Input/Input.module.scss
@@ -5,9 +5,78 @@
     background-color: #fff;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.label {
+    color: rgb(102, 102, 102);
+    margin-bottom: 5px;
+}
+
 .input {
-    font-size: 20px;
-    padding: 5px 10px;
+    font-size: 16px;
+    padding: 7px 10px;
     outline: none;
-    border: 1px solid gray;
+    border: 1px solid rgb(181, 181, 181);
+}
+
+.input[type=file] {
+    font-size: 10px;
+}
+
+// .input[type=checkbox] {
+//     margin-left: 20px;
+//     width: 15px;
+//     height: 15px;
+// }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 55px;
+    height: 26px;
+    margin-left: 20px;
+    .input[type=checkbox] {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 10px;
+
+    &:before {
+        position: absolute;
+        content: "";
+        height: 18px;
+        width: 18px;
+        left: 6px;
+        bottom: 4px;
+        background-color: white;
+        transition: .4s;
+        border-radius: 50%;
+    }
+}
+
+.input[type=checkbox]:checked + .slider{
+    background-color: rgb(87, 168, 87);
+}
+
+.input:focus + .slider {
+    // box-shadow: 0 0 1px #2196F3;
+}
+
+.input:checked + .slider:before {
+    transform: translateX(26px);
 }
