--- a/client/src/components/formRegister/FormRegister.module.scss
+++ b/client/src/components/formRegister/FormRegister.module.scss
@@ -14,8 +14,23 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 11;
-    padding: 30px 20px;
+    padding: 70px;
     background-color: #fff;
+    border-radius: 10px;
+
+    &__left {
+
+        &_title {
+            margin-bottom: 20px;
+        }
+    }
+
+    &__right {
+        
+        &_title {
+            margin-bottom: 20px;
+        }
+    }
 
     &__title {
         text-align: center;
@@ -23,7 +38,13 @@
     }
 }
 
+.content {
+    display: flex;
+    gap: 80px;
+}
+
 .inputs {
     display: flex;
     flex-direction: column;
+    align-items: start;
 }
