--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 ul, li {
@@ -22,4 +24,8 @@ a {
 
 .toggleScroll {
   overflow-y: hidden;
+}
+
+.starIcon {
+  color: rgb(232, 209, 77);
 }
