--- a/client/src/components/tariffCard/TariffCard.module.scss
+++ b/client/src/components/tariffCard/TariffCard.module.scss
@@ -1,4 +1,7 @@
 .card {
+    position: fixed;
+    right: 20px;
+    // left: 0;
     width: 100%;
     max-width: 400px;
     padding: 20px;
@@ -32,7 +35,9 @@
 
 @media screen and (max-width: 850px) {
     .card {
+        position: static;
         width: 100%;
         max-width: none;
+        margin-bottom: 20px;
     }
 }
