--- a/client/src/pages/gig/Gig.module.scss
+++ b/client/src/pages/gig/Gig.module.scss
@@ -56,6 +56,12 @@
     margin-bottom: 60px;
 }
 
+.reviews {
+    width: 100%;
+    max-width: 700px;
+}
+
+
 @media screen and (max-width: 1190px) {
     .wrapper {
 
