Add message and conversation page, change table elemnet

--- a/client/src/components/formAuth/FormAuth.module.scss
+++ b/client/src/components/formAuth/FormAuth.module.scss
@@ -16,6 +16,7 @@
     z-index: 11;
     padding: 30px 20px;
     background-color: #fff;
+    border-radius: 10px;
 
     &__title {
         text-align: center;
