--- a/client/src/components/ui/Popup/Popup.module.scss
+++ b/client/src/components/ui/Popup/Popup.module.scss
@@ -16,6 +16,7 @@
     gap: 20px;
     padding: 8px 15px;
     transition: all .3s ease;
+    color: #000;
 
     &:hover {
         background-color: rgb(243, 243, 243);
