--- a/client/src/SwiperCustom.css
+++ b/client/src/SwiperCustom.css
@@ -21,31 +21,32 @@
 }
 
 /* Gallery slider */
-.mySwiper2 {
+.thumbs2 {
   height: 350px;
   width: 100%;
   margin-bottom: 10px;
 }
 
-.mySwiper {
-  /* width: 200px; */
-  box-sizing: border-box;
-  padding: 10px 0;
-}
-
-.mySwiper .swiper-slide {
-  width: 25%;
-  height: 100px;
-  opacity: 0.4;
-}
-
-.mySwiper .swiper-slide-thumb-active {
-  opacity: 1;
-}
-
-.swiper-slide img {
+.thumbs2 .swiper-slide img, .thumbs .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
+.thumbs {
+  /* width: 200px; */
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.thumbs .swiper-slide {
+  width: 25%;
+  height: 100px;
+  opacity: 0.4;
+}
+
+.thumbs .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
