--- a/client/src/components/projectCard/ProjectCard.module.scss
+++ b/client/src/components/projectCard/ProjectCard.module.scss
@@ -9,6 +9,7 @@
         border-top-left-radius: 5px;
         width: 100%;
         height: 237px;
+        // height: 100px;
         cursor: pointer;
     }
 }
@@ -23,6 +24,7 @@
     }
 
     &__title {
+        color: gray;
         font-weight: 700;
         font-size: 14px;
         margin-bottom: 5px;
