--- a/client/src/components/ui/Button/Button.module.scss
+++ b/client/src/components/ui/Button/Button.module.scss
@@ -1,5 +1,4 @@
 .btn {
-    // width: 100%;
     font-size: 16px;
     font-weight: 500;
     padding: 8px 16px;
@@ -8,6 +7,7 @@
     outline: none;
     color: #fff;
     border: 1px solid transparent;
+    border-radius: 5px;
 
     &:hover {
         cursor: pointer;
