--- a/client/src/components/ui/Input/Input.module.scss
+++ b/client/src/components/ui/Input/Input.module.scss
@@ -20,6 +20,7 @@
     padding: 7px 10px;
     outline: none;
     border: 1px solid rgb(181, 181, 181);
+    border-radius: 5px;
 }
 
 .input[type=file] {
