--- a/client/src/components/messageCard/MessageCard.module.scss
+++ b/client/src/components/messageCard/MessageCard.module.scss
@@ -1,9 +1,6 @@
 .card {
     display: flex;
-    justify-content: space-between;
-    // align-self: flex-end;
-    // flex-direction: row-reverse;
-    gap: 20px;
+    gap: 40px;
     width: 100%;
     max-width: 500px;
     margin-bottom: 10px;
@@ -17,6 +14,17 @@
         padding: 10px 20px;
     }
 }
+
+.card__owner {
+    display: flex;
+    align-self: flex-end;
+    flex-direction: row-reverse;
+    gap: 40px;
+    width: 100%;
+    max-width: 400px;
+    margin: 0px 10px 10px 0px;
+}
+
 
 .base__avatar {
     width: 25px;
